Inline scip-gradle-plugin BuildInfo and Logging helpers